// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Date time range selector/DateTime Picker Default 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "1.5rem",
        "width": "1056px",
      }
    }
  >
    <div
      className="iot--date-time-picker__wrapper"
      data-testid="date-time-picker"
      id="datetimepicker-iot--date-time-picker__wrapper"
      onKeyDown={[Function]}
    >
      <div
        className="iot--date-time-picker__box "
      >
        <div
          className="iot--date-time-picker__field"
          data-testid="date-time-picker__field"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="bx--tooltip--definition bx--tooltip--a11y"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <button
              aria-describedby="definition-tooltip-2"
              className="bx--tooltip__trigger bx--tooltip--a11y bx--tooltip__trigger--definition bx--tooltip--bottom bx--tooltip--align-center"
              onBlur={[Function]}
              onFocus={[Function]}
              type="button"
            >
              Last 30 minutes
            </button>
            <span
              className="bx--assistive-text"
              id="definition-tooltip-2"
              role="tooltip"
            >
              2018-10-28 07:04 to Now
            </span>
          </span>
          <svg
            aria-label="Calendar"
            className="iot--date-time-picker__icon"
            fill="currentColor"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Date time range selector/DateTime Picker Light version 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "1.5rem",
        "width": "1056px",
      }
    }
  >
    <div
      className="iot--date-time-picker__wrapper"
      data-testid="date-time-picker"
      id="datetimepicker-iot--date-time-picker__wrapper"
      onKeyDown={[Function]}
    >
      <div
        className="iot--date-time-picker__box iot--date-time-picker__box--light"
      >
        <div
          className="iot--date-time-picker__field"
          data-testid="date-time-picker__field"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="bx--tooltip--definition bx--tooltip--a11y"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <button
              aria-describedby="definition-tooltip-10"
              className="bx--tooltip__trigger bx--tooltip--a11y bx--tooltip__trigger--definition bx--tooltip--bottom bx--tooltip--align-center"
              onBlur={[Function]}
              onFocus={[Function]}
              type="button"
            >
              Last 30 minutes
            </button>
            <span
              className="bx--assistive-text"
              id="definition-tooltip-10"
              role="tooltip"
            >
              2018-10-28 07:04 to Now
            </span>
          </span>
          <svg
            aria-label="Calendar"
            className="iot--date-time-picker__icon"
            fill="currentColor"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Date time range selector/DateTime Picker Locale 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "1.5rem",
        "width": "1056px",
      }
    }
  >
    <div
      className="iot--date-time-picker__wrapper"
      data-testid="date-time-picker"
      id="datetimepicker25-iot--date-time-picker__wrapper"
      onKeyDown={[Function]}
    >
      <div
        className="iot--date-time-picker__box "
      >
        <div
          className="iot--date-time-picker__field"
          data-testid="date-time-picker__field"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            title="01/04/2020 12:34 to 06/04/2020 10:49"
          >
            01/04/2020 12:34 to 06/04/2020 10:49
          </span>
          <svg
            aria-label="Calendar"
            className="iot--date-time-picker__icon"
            fill="currentColor"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Date time range selector/DateTime Picker Selected absolute 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "1.5rem",
        "width": "1056px",
      }
    }
  >
    <div
      className="iot--date-time-picker__wrapper"
      data-testid="date-time-picker"
      id="datetimepicker-iot--date-time-picker__wrapper"
      onKeyDown={[Function]}
    >
      <div
        className="iot--date-time-picker__box "
      >
        <div
          className="iot--date-time-picker__field"
          data-testid="date-time-picker__field"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            title="2020-04-01 12:34 to 2020-04-06 10:49"
          >
            2020-04-01 12:34 to 2020-04-06 10:49
          </span>
          <svg
            aria-label="Calendar"
            className="iot--date-time-picker__icon"
            fill="currentColor"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Date time range selector/DateTime Picker Selected preset 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "1.5rem",
        "width": "1056px",
      }
    }
  >
    <div
      className="iot--date-time-picker__wrapper"
      data-testid="date-time-picker"
      id="datetimepicker-iot--date-time-picker__wrapper"
      onKeyDown={[Function]}
    >
      <div
        className="iot--date-time-picker__box "
      >
        <div
          className="iot--date-time-picker__field"
          data-testid="date-time-picker__field"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="bx--tooltip--definition bx--tooltip--a11y"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <button
              aria-describedby="definition-tooltip-4"
              className="bx--tooltip__trigger bx--tooltip--a11y bx--tooltip__trigger--definition bx--tooltip--bottom bx--tooltip--align-center"
              onBlur={[Function]}
              onFocus={[Function]}
              type="button"
            >
              Last 12 hours
            </button>
            <span
              className="bx--assistive-text"
              id="definition-tooltip-4"
              role="tooltip"
            >
              2018-10-27 19:34 to Now
            </span>
          </span>
          <svg
            aria-label="Calendar"
            className="iot--date-time-picker__icon"
            fill="currentColor"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Date time range selector/DateTime Picker Selected relative 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "1.5rem",
        "width": "1056px",
      }
    }
  >
    <div
      className="iot--date-time-picker__wrapper"
      data-testid="date-time-picker"
      id="datetimepicker-iot--date-time-picker__wrapper"
      onKeyDown={[Function]}
    >
      <div
        className="iot--date-time-picker__box "
      >
        <div
          className="iot--date-time-picker__field"
          data-testid="date-time-picker__field"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            title="2018-10-28 13:10 to 2018-10-28 13:30"
          >
            2018-10-28 13:10 to 2018-10-28 13:30
          </span>
          <svg
            aria-label="Calendar"
            className="iot--date-time-picker__icon"
            fill="currentColor"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Date time range selector/DateTime Picker Without a custom range link 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "1.5rem",
        "width": "1056px",
      }
    }
  >
    <div
      className="iot--date-time-picker__wrapper"
      data-testid="date-time-picker"
      id="datetimepicker-iot--date-time-picker__wrapper"
      onKeyDown={[Function]}
    >
      <div
        className="iot--date-time-picker__box "
      >
        <div
          className="iot--date-time-picker__field"
          data-testid="date-time-picker__field"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="bx--tooltip--definition bx--tooltip--a11y"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <button
              aria-describedby="definition-tooltip-8"
              className="bx--tooltip__trigger bx--tooltip--a11y bx--tooltip__trigger--definition bx--tooltip--bottom bx--tooltip--align-center"
              onBlur={[Function]}
              onFocus={[Function]}
              type="button"
            >
              Last 12 hours
            </button>
            <span
              className="bx--assistive-text"
              id="definition-tooltip-8"
              role="tooltip"
            >
              2018-10-27 19:34 to Now
            </span>
          </span>
          <svg
            aria-label="Calendar"
            className="iot--date-time-picker__icon"
            fill="currentColor"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Date time range selector/DateTime Picker Without a relative option 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "margin": "1.5rem",
        "width": "1056px",
      }
    }
  >
    <div
      className="iot--date-time-picker__wrapper"
      data-testid="date-time-picker"
      id="datetimepicker-iot--date-time-picker__wrapper"
      onKeyDown={[Function]}
    >
      <div
        className="iot--date-time-picker__box "
      >
        <div
          className="iot--date-time-picker__field"
          data-testid="date-time-picker__field"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="bx--tooltip--definition bx--tooltip--a11y"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <button
              aria-describedby="definition-tooltip-6"
              className="bx--tooltip__trigger bx--tooltip--a11y bx--tooltip__trigger--definition bx--tooltip--bottom bx--tooltip--align-center"
              onBlur={[Function]}
              onFocus={[Function]}
              type="button"
            >
              Last 12 hours
            </button>
            <span
              className="bx--assistive-text"
              id="definition-tooltip-6"
              role="tooltip"
            >
              2018-10-27 19:34 to Now
            </span>
          </span>
          <svg
            aria-label="Calendar"
            className="iot--date-time-picker__icon"
            fill="currentColor"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
